# AndroidStudio

01ColladaViewer/: build.gradle  gradle.properties  settings.gradle
01ColladaViewer/app/: build.gradle
01ColladaViewer/app/src/main/: AndroidManifest.xml
01ColladaViewer/app/src/main/cpp/: CMakeLists.txt  Native.cpp
01ColladaViewer/app/src/main/cpp/Animation/: CMakeLists.txt
01ColladaViewer/app/src/main/cpp/TinyXml/: CMakeLists.txt
01ColladaViewer/app/src/main/cpp/core/: CMakeLists.txt  MeshCube.h  Texture.cpp
01ColladaViewer/app/src/main/cpp/stb/: CMakeLists.txt
01ColladaViewer/app/src/main/java/com/android/collada/: AppView.java  MainActivity.java  NativeLibrary.java  OGLRenderer.java
01ColladaViewer/app/src/main/java/com/android/dragon/: AppView.java  MainActivity.java  OGLRenderer.java
01ColladaViewer/app/src/main/res/values/: themes.xml
02WebGPU/: gradle.properties
02WebGPU/app/: build.gradle
02WebGPU/app/src/main/: AndroidManifest.xml
02WebGPU/app/src/main/assets/: animationES20.frag  animationES20.vert  animationES30.frag  animationES30.vert  textureES20.frag  textureES20.vert  textureES30.frag  textureES30.vert
02WebGPU/app/src/main/assets/shader/: animation.wgsl  texture.wgsl
02WebGPU/app/src/main/cpp/: AssetIO.cpp  AssetIO.h  CMakeLists.txt  DeltaClock.cpp  DeltaClock.h  Native.cpp  RenderThread.cpp  RenderThread.h
02WebGPU/app/src/main/cpp/Animation/AnimatedModel/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedModel.cpp  AnimatedModel.h
02WebGPU/app/src/main/cpp/Animation/Animator/: Animation.cpp  Animation.h  Animator.cpp
02WebGPU/app/src/main/cpp/Animation/ColladaLoader/: ColladaLoader.cpp  ColladaLoader.h
02WebGPU/app/src/main/cpp/Animation/Render/: AnimationShader.cpp  AnimationShader.h
02WebGPU/app/src/main/cpp/SDK/include/: webgpu.h
02WebGPU/app/src/main/cpp/Shape/: CMakeLists.txt  Shape.cpp  Shape.h  Sphere.cpp
02WebGPU/app/src/main/cpp/States/: CMakeLists.txt  Collada.cpp  Collada.h  IStateMachine.h  StateMachine.cpp  StateMachine.h  Wireframe.cpp  Wireframe.h
02WebGPU/app/src/main/cpp/TinyXml/: CMakeLists.txt
02WebGPU/app/src/main/cpp/WebGPU/: CMakeLists.txt  Logging.h  WgpBatchRenderer.cpp  WgpBuffer.cpp  WgpContext.cpp  WgpContext.h  WgpData.h  WgpMesh.cpp  WgpMesh.h  WgpModel.cpp  WgpModel.h  WgpRenderer.cpp  WgpRenderer.h  WgpTexture.cpp  WgpTexture.h
02WebGPU/app/src/main/cpp/core/: AssimpModel.cpp  AssimpModel.h  CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshCube.cpp  Model.cpp  Model.h  ModelMatrix.cpp  ModelMatrix.h  ObjModel.cpp  ObjModel.h  Shader.cpp  Shader.h  Texture.h  Vector.cpp  Vector.h
02WebGPU/app/src/main/cpp/core/animation/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  CMakeLists.txt
02WebGPU/app/src/main/cpp/stb/: CMakeLists.txt  stb_image.cpp  stb_image.h
02WebGPU/app/src/main/java/com/android/webgpu/: AppView.java  MainActivity.java  NativeLibrary.java  OGLRenderer.java  Renderer.java  View.java  WgpRenderer.java  WgpView.java
02WebGPU/app/src/main/res/layout/: activity_main.xml
02WebGPU/app/src/main/res/values/: themes.xml
